--- a/views/list.ejs
+++ b/views/list.ejs
@@ -27,6 +27,6 @@
 
 
 
-
+<footer><h2><b>Type in the blank Space to add activity .<br>And select the button to check it off </b></h2></footer>
   </body>
 </html>
